--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       
       <div class="content">
-        <img class="image-right" width="300px" src="./Images/PumpkinPiTerminal.png"/>
+        <img class="image-right" width="300px" src="./Images/PumpkinPiTerminal.PNG"/>
         <h2 id="overview">Overview<hr></h2>
         <div class="build-text">
           <p>Some dozen years ago, I very nearly failed a 200-level Electrical Engineering course. More than fifteen years ago was the last time I did much programming. In FORTRAN. This is my guide to making a Pi powered interactive Jack-o'-Lantern from my completely novice perspective.</p>
