--- a/index.html
+++ b/index.html
@@ -51,27 +51,28 @@
             <li>Amber 5mm LED</li>
             <li>Resistors</li>
           </ul>
-          <p>Some of the specifics on the parts list were driven by what I had on hand. I have four circuits for LEDs on pins 17, 22, 23 and 25. For a brighter red glow, I put two red LEDs together on one circuit. They are wired in parallel so each sees 3.3V for maximum brightness. Each LED circuit also has a 220 ohm current limiting resistor.</p>
-          <p>The PIR wiring is very simple. It has 3 connections: ground, +5V and signal. My signal wire connects to pin 24 and the whole PIR is on a 12 inch lead so I can position it for best coverage. </p>
+          <p>Some of the specifics on the parts list were driven by what I had on hand. I have four circuits for LEDs on pins 17, 22, 23 and 25. For a brighter red glow, I put two red LEDs together on one circuit. They are wired in parallel so each sees 3.3V for maximum brightness. Each individual LED also has a current limiting resistor.</p>
+          <p>The PIR wiring is very simple. It has 3 connections: ground, +5V and signal. My signal wire connects to pin 24 and the whole PIR is on a 12 inch lead so I can position it for best coverage. When the PIR senses motion, it sends out 3.3V on the signal wire. The Raspberry Pi interprets that as <code class="prettyprint">True</code>. To test using the PIR to trigger an action, I connected the PIR to pin 24, an LED to pin 22, and ran this script. All it does is listen for the PIR on pin 24. When a voltage is detected, it prints a message to the terminal and turns on the light. The <code class="prettyprint">While True:</code> statement will cause this loop to run forever. To exit this quick test, wait until the LED is off and hit Ctrl-C.</p>
 <pre class="prettyprint">
 import RPi.GPIO as GPIO, time
 
-GPIO.setmode(GPIO.BCM)
+GPIO.setmode(GPIO.BCM)      # Set up
 GPIO.setup(22, GPIO.OUT)
 GPIO.setup(24, GPIO.IN)
 
-GPIO.output(22, True)
-time.sleep(10)
+GPIO.output(22, True)       # Turn the light on to confirm it's working
+time.sleep(5)
 GPIO.output(22, False)
-time.sleep(10)
+time.sleep(5)
 
 while True:
-  if GPIO.input(24):
+  if GPIO.input(24):        # Listen for the PIR on pin 24
     print "Motion Sensor"
     GPIO.output(22, True)
     time.sleep(10)
     GPIO.output(22, False)
 </pre>
+          <p>A quick note about the GPIO pins on the Raspberry Pi: They are digital, which means that they are all or nothing, high or low, on or off, <code class="prettyprint">True</code> or <code class="prettyprint">False</code>. The correlation between what is happening in the code and physically, on the Pi, is that <code class="prettyprint">True</code> equals +3.3V on the GPIO pin and <code class="prettyprint">False</code> equals no voltage on the pin.</p>
         </div>
 
         <h2 id="code">Write Some Code<hr></h2>
